# ppke

./: README.md  epppkep0.sh  epppkep1.sh
benchmarks/: Downloads - Verknüpfung.lnk
data_100/: pair13.txt  pair14.txt  pair16.txt  pair19.txt  pair2.txt  pair21.txt  pair28.txt  pair29.txt  pair3.txt  pair30.txt  pair32.txt  pair33.txt  pair34.txt  pair36.txt  pair37.txt  pair38.txt  pair39.txt  pair41.txt  pair46.txt  pair47.txt  pair48.txt  pair50.txt  pair52.txt  pair57.txt  pair58.txt  pair60.txt  pair62.txt  pair65.txt  pair7.txt  pair71.txt  pair72.txt  pair73.txt  pair78.txt  pair83.txt  pair86.txt  pair88.txt  pair9.txt  pair91.txt  pair93.txt  pair94.txt  (+1 more)
data_1000/: pair0.txt  pair1.txt  pair10.txt  pair100.txt  pair101.txt  pair102.txt  pair103.txt  pair104.txt  pair105.txt  pair106.txt  pair107.txt  pair108.txt  pair109.txt  pair11.txt  pair110.txt  pair111.txt  pair112.txt  pair113.txt  pair114.txt  pair115.txt  pair116.txt  pair117.txt  pair118.txt  pair119.txt  pair12.txt  pair120.txt  pair121.txt  pair122.txt  pair123.txt  pair124.txt  pair126.txt  pair127.txt  pair128.txt  pair129.txt  pair130.txt  pair131.txt  pair132.txt  pair133.txt  pair134.txt  pair135.txt  (+913 more)
src/examples/eppkep/: CMakeLists.txt  compute_cycles.cpp  eppkep.cpp  find_largest_set.cpp  matching.cpp
src/examples/eppkep/common/: CircuitWrapper.cpp  compute_cycles_circuit.cpp  compute_cycles_circuit.hpp  find_largest_set_circuit.cpp  find_largest_set_circuit.hpp  matching_circuit.cpp  matching_circuit.hpp  pair.cpp  pair.hpp  patient.hpp  plain_data.cpp  plain_data.hpp
(+234 files in other folders)
